--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -56,7 +56,8 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
-        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64
+        # TODO: Add linux/arm64 after initial deployment is validated
 
     - name: 📋 Image digest
       run: echo ${{ steps.meta.outputs.digest }}
